[package]
name = "darknet"
version = "0.3.4"
authors = ["alianse77"]
edition = "2021"
description = "A Rust wrapper for Darknet, an open source neural network framework written in C and CUDA."
repository = "https://github.com/alianse777/darknet-rust"
license = "MIT"
keywords = ["darknet", "machine-learning", "deep-learning", "neural-networks", "yolo"]
readme = "./README.md"

[dependencies]
darknet-sys = { version = "0.3.2", git = "https://github.com/ko1N/darknet-sys-rust", default-features = false }
#darknet-sys = { version = "0.3.2", path = "../darknet-sys-rust", default-features = false }
image = "0.24.5"
libc = "0.2"
thiserror = "1.0"
num-derive = "0.3"
num-traits = "0.2"

[dev-dependencies]
reqwest = { version = "0.11.13", features = ["blocking"] }
sha2 = "0.10.6"
hex = "0.4"
argh = "0.1"
anyhow = "1.0"

[features]
default = ["enable-openmp"]
buildtime-bindgen = ["darknet-sys/buildtime-bindgen"]
build = ["darknet-sys/build"]
dylib = ["darknet-sys/dylib"]
enable-opencv = ["darknet-sys/enable-opencv"]
enable-cuda = ["darknet-sys/enable-cuda"]
enable-cudnn = ["darknet-sys/enable-cudnn"]
enable-openmp = ["darknet-sys/enable-openmp"]
